--- a/app/src/main/res/layout/fragment_about_event.xml
+++ b/app/src/main/res/layout/fragment_about_event.xml
@@ -113,7 +113,7 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                             android:lineSpacingMultiplier="1.5"
                             android:text="@string/ignite_rules"
                             android:textColor="@color/contrasText"
-                            android:textStyle="bold"
+                            android:textStyle="italic"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintStart_toStartOf="parent"
