--- a/app/src/main/res/layout/events_card_for_eventlist.xml
+++ b/app/src/main/res/layout/events_card_for_eventlist.xml
@@ -94,7 +94,7 @@
                     android:text="abcd"
                     android:background="@color/igniteSecondaryLight"
                     android:padding="4dp"
-                    android:textColor="@color/contrasText"
+                    android:textColor="@color/lime"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
