--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,7 +69,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:text="@string/nav_events"
-                            android:textColor="@color/contrasText"
+                            android:textColor="@color/lime"
                             android:textStyle="bold" />
 
                         <View
@@ -141,7 +141,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:text="Event Registration"
-                            android:textColor="@color/contrasText"
+                            android:textColor="@color/lime"
                             android:textStyle="bold" />
 
                         <View
@@ -205,7 +205,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:text="Leaderboards"
-                            android:textColor="@color/contrasText"
+                            android:textColor="@color/lime"
                             android:textStyle="bold" />
 
                         <View
@@ -287,7 +287,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:text="See Participants"
-                            android:textColor="@color/contrasText"
+                            android:textColor="@color/lime"
 
                             android:textStyle="bold" />
 
@@ -351,7 +351,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:text="@string/nav_navigation"
-                            android:textColor="@color/contrasText"
+                            android:textColor="@color/lime"
                             android:textStyle="bold" />
 
                         <View
@@ -433,7 +433,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:text="@string/nav_schedule"
-                            android:textColor="@color/contrasText"
+                            android:textColor="@color/lime"
                             android:textStyle="bold" />
 
                         <View
