--- a/app/src/main/res/layout/results_list_card_view.xml
+++ b/app/src/main/res/layout/results_list_card_view.xml
@@ -31,13 +31,12 @@
                 >
 
                 <TextView
+                    android:id="@+id/results_card_event_name_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/results_card_event_name_textview"
                     android:text="sandeep"
-                    android:textSize="16sp"
                     android:textColor="@color/contrasText"
-                    />
+                    android:textSize="14sp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
