--- a/app/src/main/res/layout/selected_team_cardview.xml
+++ b/app/src/main/res/layout/selected_team_cardview.xml
@@ -29,13 +29,16 @@
             android:layout_margin="10dp"
             android:orientation="horizontal">
 
-            <ImageView
+            <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/victory_xx"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
+                app:lottie_fileName="medal.json"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +54,8 @@
                 android:text="NITK Surathkal"
                 android:textAlignment="viewStart"
                 android:textColor="@color/contrasText"
-                android:textSize="16sp"
+                android:textSize="14sp"
+                android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
