--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -13,17 +13,12 @@
         android:layout_height="match_parent">
 
 
-
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
 
             >
-
-
 
 
             <androidx.cardview.widget.CardView
@@ -36,18 +31,18 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:background="@color/igniteSecondaryLight"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:background="@color/igniteSecondaryLight">
 
                     <TextView
                         android:id="@+id/textView19"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Faculty Coordinators"
+                        android:text="FACULTY COORDINATORS"
+                        android:textColor="@color/lime"
                         android:textSize="18sp"
                         android:textStyle="bold"
-                        android:textColor="@color/lime"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -93,7 +88,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:layout_marginBottom="8dp"
-                        android:text="HOD"
+                        android:text="HOD MACS"
                         android:textColor="@color/contrasText"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/textView26"
@@ -186,7 +181,7 @@
                         android:layout_marginTop="10dp"
                         android:gravity="center"
 
-                        android:text="IGNITE Core"
+                        android:text="IGNITE MANAGEMENT"
                         android:textColor="@color/lime"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -394,107 +389,13 @@
                         app:layout_constraintStart_toStartOf="@+id/textView50"
                         app:layout_constraintTop_toBottomOf="@+id/textView50" />
 
-                    <androidx.constraintlayout.widget.Guideline
-                        android:id="@+id/guideline6"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        app:layout_constraintGuide_percent="0.50" />
-
-                    <com.mikhaellopez.circularimageview.CircularImageView
-                        android:id="@+id/circularImageView6"
-                        android:layout_width="88dp"
-                        android:layout_height="88dp"
-                        android:layout_marginTop="8dp"
-
-
-                        android:src="@drawable/praveen"
-                        app:civ_shadow="true"
-                        app:civ_shadow_color="#3f51b5"
-                        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView30" />
-
-                    <com.mikhaellopez.circularimageview.CircularImageView
-                        android:id="@+id/circularImageView"
-                        android:layout_width="90dp"
-                        android:layout_height="88dp"
-                        android:layout_marginTop="8dp"
-                        android:scaleType="centerInside"
-                        android:src="@drawable/avinabhh"
-
-                        app:civ_shadow="true"
-                        app:civ_shadow_color="#3f51b5"
-                        app:civ_shadow_radius="5"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="@+id/guideline6"
-                        app:layout_constraintTop_toBottomOf="@+id/textView30" />
-
-                    <com.mikhaellopez.circularimageview.CircularImageView
-                        android:id="@+id/circularImageView2"
-                        android:layout_width="88dp"
-                        android:layout_height="88dp"
-                        android:layout_marginTop="8dp"
-                        android:scaleType="centerInside"
-                        android:src="@drawable/arpit"
-
-                        app:civ_shadow="true"
-                        app:civ_shadow_color="#3f51b5"
-                        app:civ_shadow_radius="5"
-                        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView46" />
-
-                    <com.mikhaellopez.circularimageview.CircularImageView
-                        android:id="@+id/circularImageView3"
-                        android:layout_width="88dp"
-                        android:layout_height="88dp"
-                        android:layout_marginTop="8dp"
-                        android:scaleType="centerCrop"
-
-                        android:src="@drawable/jashleen"
-                        app:civ_shadow="true"
-                        app:civ_shadow_color="#3f51b5"
-                        app:civ_shadow_radius="5"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="@+id/guideline6"
-                        app:layout_constraintTop_toBottomOf="@+id/textView33" />
-
-                    <com.mikhaellopez.circularimageview.CircularImageView
-                        android:id="@+id/circularImageView4"
-                        android:layout_width="88dp"
-                        android:layout_height="88dp"
-                        android:layout_marginTop="8dp"
-                        android:src="@drawable/ankit"
-                        app:civ_shadow="true"
-                        app:civ_shadow_color="#3f51b5"
-                        app:civ_shadow_radius="5"
-                        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView49" />
-
-                    <com.mikhaellopez.circularimageview.CircularImageView
-                        android:id="@+id/circularImageView5"
-                        android:layout_width="88dp"
-                        android:layout_height="88dp"
-                        android:layout_marginTop="8dp"
-                        android:src="@drawable/rc"
-                        app:civ_shadow="true"
-                        app:civ_shadow_color="#3f51b5"
-                        app:civ_shadow_radius="5"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="@+id/guideline6"
-                        app:layout_constraintTop_toBottomOf="@+id/textView39" />
-
                     <TextView
                         android:id="@+id/textView53"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:layout_marginBottom="16dp"
                         android:text="9650763204"
                         android:textColor="@color/contrasText"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/textView52"
                         app:layout_constraintStart_toStartOf="@+id/textView52"
                         app:layout_constraintTop_toBottomOf="@+id/textView52" />
@@ -512,15 +413,149 @@
                         app:layout_constraintEnd_toEndOf="@+id/textView44"
                         app:layout_constraintStart_toStartOf="@+id/textView44"
                         app:layout_constraintTop_toBottomOf="@+id/textView44" />
+
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guideline6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.50" />
+
+                    <com.mikhaellopez.circularimageview.CircularImageView
+                        android:id="@+id/circularImageView6"
+                        android:layout_width="88dp"
+                        android:layout_height="88dp"
+                        android:layout_marginTop="8dp"
+
+
+                        android:src="@drawable/praveen"
+                        app:civ_shadow="true"
+                        app:civ_shadow_color="#3f51b5"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView30" />
+
+                    <com.mikhaellopez.circularimageview.CircularImageView
+                        android:id="@+id/circularImageView"
+                        android:layout_width="90dp"
+                        android:layout_height="88dp"
+
+                        android:layout_marginTop="8dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/avinabhh"
+                        app:civ_shadow="true"
+                        app:civ_shadow_color="#3f51b5"
+                        app:civ_shadow_radius="5"
+                        app:layout_constraintEnd_toStartOf="@+id/guideline6"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView46" />
+
+                    <com.mikhaellopez.circularimageview.CircularImageView
+                        android:id="@+id/circularImageView2"
+                        android:layout_width="88dp"
+                        android:layout_height="88dp"
+                        android:layout_marginTop="8dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/arpit"
+
+                        app:civ_shadow="true"
+                        app:civ_shadow_color="#3f51b5"
+                        app:civ_shadow_radius="5"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/guideline6"
+                        app:layout_constraintTop_toBottomOf="@+id/textView46" />
+
+                    <com.mikhaellopez.circularimageview.CircularImageView
+                        android:id="@+id/circularImageView3"
+                        android:layout_width="88dp"
+                        android:layout_height="88dp"
+                        android:layout_marginTop="16dp"
+                        android:scaleType="centerCrop"
+
+                        android:src="@drawable/jashleen"
+                        app:civ_shadow="true"
+                        app:civ_shadow_color="#3f51b5"
+                        app:civ_shadow_radius="5"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/guideline6"
+                        app:layout_constraintTop_toBottomOf="@+id/textView33" />
+
+                    <com.mikhaellopez.circularimageview.CircularImageView
+                        android:id="@+id/circularImageView4"
+                        android:layout_width="88dp"
+                        android:layout_height="88dp"
+                        android:layout_marginTop="16dp"
+                        android:src="@drawable/ankit"
+                        app:civ_shadow="true"
+                        app:civ_shadow_color="#3f51b5"
+                        app:civ_shadow_radius="5"
+                        app:layout_constraintEnd_toStartOf="@+id/guideline6"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView33" />
+
+                    <com.mikhaellopez.circularimageview.CircularImageView
+                        android:id="@+id/circularImageView5"
+                        android:layout_width="88dp"
+                        android:layout_height="88dp"
+                        android:layout_marginTop="16dp"
+                        android:src="@drawable/rc"
+                        app:civ_shadow="true"
+                        app:civ_shadow_color="#3f51b5"
+                        app:civ_shadow_radius="5"
+                        app:layout_constraintEnd_toStartOf="@+id/guideline6"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView53" />
+
+                    <com.mikhaellopez.circularimageview.CircularImageView
+                        android:id="@+id/imageView14"
+                        android:layout_width="88dp"
+                        android:layout_height="88dp"
+                        android:layout_marginTop="16dp"
+                        android:src="@drawable/nancywadhwa"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/guideline6"
+                        app:layout_constraintTop_toBottomOf="@+id/textView39" />
+
+                    <TextView
+                        android:id="@+id/textView54"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="Nancy"
+                        android:textColor="@color/contrasText"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="@+id/imageView14"
+                        app:layout_constraintStart_toStartOf="@+id/imageView14"
+                        app:layout_constraintTop_toBottomOf="@+id/imageView14" />
+
+                    <TextView
+                        android:id="@+id/textView55"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="Alumni and PR head"
+                        android:textColor="@color/contrasText"
+                        app:layout_constraintEnd_toEndOf="@+id/textView54"
+                        app:layout_constraintStart_toStartOf="@+id/textView54"
+                        app:layout_constraintTop_toBottomOf="@+id/textView54" />
+
+                    <TextView
+                        android:id="@+id/textView56"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginBottom="8dp"
+                        android:text="8556920635"
+                        android:textColor="@color/contrasText"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="@+id/textView55"
+                        app:layout_constraintStart_toStartOf="@+id/textView55"
+                        app:layout_constraintTop_toBottomOf="@+id/textView55"
+                        app:layout_constraintVertical_bias="0.0" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
             </androidx.cardview.widget.CardView>
-
-
-
-
-
 
 
         </LinearLayout>
