--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -29,7 +29,7 @@
             <item
                 android:id="@+id/nav_contact_us"
                 android:icon="@drawable/ic_contactus"
-                android:title="@string/menu_contact_us" />
+                android:title="Team IGNITE" />
             <item
                 android:id="@+id/nav_feedback"
                 android:icon="@drawable/ic_feedback"
