--- a/app/src/main/res/layout/activity_admin_register_team.xml
+++ b/app/src/main/res/layout/activity_admin_register_team.xml
@@ -34,7 +34,7 @@
                 android:background="@drawable/edit_text_shape2"
                 android:padding="8dp"
                 android:ems="10"
-                android:hint="Username"
+                android:hint="Leader Email-ID"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
 
                 android:padding="8dp"
                 android:ems="10"
-                android:hint="Password"
+                android:hint="Unique college ID"
                 android:inputType="textPassword"
                 app:layout_constraintEnd_toEndOf="@+id/edx1_username"
                 app:layout_constraintStart_toStartOf="@+id/edx1_username"
