--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -143,7 +143,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                         android:id="@+id/password_editText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Password"
+                        android:hint="unique college ID"
                         android:imeOptions="actionDone"
                         android:inputType="textPassword"
                         android:maxLines="1"
@@ -168,7 +168,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                         android:id="@+id/username_editText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Username"
+                        android:hint="Leaders email address"
                         android:inputType="textWebEmailAddress"
                         android:maxLines="1"
                         android:textColor="@color/contrasText"
