--- a/app/src/main/res/layout/fragment_about_event.xml
+++ b/app/src/main/res/layout/fragment_about_event.xml
@@ -112,7 +112,7 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                             android:layout_marginEnd="8dp"
                             android:lineSpacingMultiplier="1.5"
                             android:text="@string/ignite_rules"
-                            android:textColor="@color/contrasText"
+                            android:textColor="@color/lime"
                             android:textStyle="italic"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -174,7 +174,7 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:text="textco"
-                            android:textColor="@color/contrasText"
+                            android:textColor="@color/lime"
                             android:textSize="14sp"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="@+id/imageView5"
@@ -186,7 +186,7 @@ tools:context=".ui.AboutIGNITE.Fragment_AboutIgnite">
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="TextView"
-                            android:textColor="@color/contrasText"
+                            android:textColor="@color/lime"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                             app:layout_constraintEnd_toEndOf="parent"
