--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -168,7 +168,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                         android:id="@+id/username_editText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Leaders email address"
+                        android:hint="Leader's email address"
                         android:inputType="textWebEmailAddress"
                         android:maxLines="1"
                         android:textColor="@color/contrasText"
